# palindrome-checker

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  program.c
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
src/: console.rs  main.rs  options.rs
