[package]
name = "palindrome-checker"
version = "1.0.1"
edition = "2021"
authors = ["Hammad Majid <GitHub: @hammadmajid>"]
description = "A palindrome is a word, number, phrase, or other sequence of symbols that reads the same backwards as forwards."
readme = "README.md"
repository = "https://github.com/hammads-archive/palindrome-checker"
license = "Unlicense license"
keywords = ["palindrome", "palindrome-checker"]
categories = ["command-line-utilities"]

[dependencies]
